hide helpSupport & modules,task overlaping solved

--- a/src/Components/OnBording/SubModules/DashBoardCO/components/DashBoardView/style.css
+++ b/src/Components/OnBording/SubModules/DashBoardCO/components/DashBoardView/style.css
@@ -1243,4 +1243,7 @@ button.btn.-new:focus {
   .scroll-btm {
     max-height: calc(100vh - 40px) !important;
   }
+  .board-tab-design .risk-pink-grid {
+    width: 82%;
+  }
 }
